# mcp-elevenreader

./: .gitignore  README.md  pyproject.toml  server.py
src/mcp_elevenreader/: server.py
