[project]
name = "mcp-elevenreader"
version = "0.1.0"
description = "MCP server for ElevenReader (ElevenLabs Reader) API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-elevenreader = "server:main"
